--- a/BappDescription.html
+++ b/BappDescription.html
@@ -1,1 +1,5 @@
-test
+<p>Burp Suite is an amazing offensive security tool. It helps thousands of pentesters and bug bounty hunters all over the world find cool bugs. But your clients might not want to install fancy pentest tools just to reproduce your bug. BugPoC lets regular Software Developers repeat raw HTTP requests directly from their browser.</p>
+
+<p>The BugPoC Burp Extension allows Burp Suite to export raw HTTP requests directly to the BugPoC HTTP PoC Generator. This will let you use Burp Suite's proxy to identify interesting HTTP requests then preserve them with BugPoC for easy reporting. Once loaded into BugPoC, you can modify and replay the HTTP request from within the browser, without any additional tools.</p>
+
+
